# microservice_todo_gpt

./: .gitignore  compose.yaml  readme.md
backend/: pyproject.toml
backend/app/: main.py
cloudflared/: config.yaml
